--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -2,5 +2,10 @@
 # See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
 ---
 fixtures:
+  symlinks:
+    relay: "#{source_dir}"
   forge_modules:
+    inifile:
+      repo: "puppetlabs/inifile"
+      ref: "1.0.0"
 #     stdlib: "puppetlabs/stdlib"
