--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -1,11 +1,31 @@
-# This file can be used to install module dependencies for unit testing
-# See https://github.com/puppetlabs/puppetlabs_spec_helper#using-fixtures for details
 ---
 fixtures:
   symlinks:
     relay: "#{source_dir}"
+  repositories:
+    provision: 'git://github.com/puppetlabs/provision.git'
   forge_modules:
-    inifile:
-      repo: "puppetlabs/inifile"
+    facts:
+      repo: "puppetlabs-facts"
       ref: "1.0.0"
-#     stdlib: "puppetlabs/stdlib"
+    inifile:
+      repo: "puppetlabs-inifile"
+      ref: "4.1.0"
+    apt:
+      repo: "puppetlabs-apt"
+      ref: "7.3.0"
+    puppet_agent:
+      repo: "puppetlabs-puppet_agent"
+      ref: "3.0.2"
+    translate:
+      repo: "puppetlabs-translate"
+      ref: "2.1.0"
+    registry:
+      repo: "puppetlabs-registry"
+      ref: "3.1.0"
+    stdlib:
+      repo: "puppetlabs/stdlib"
+      ref: "6.0.0"
+    concat:
+      repo: "puppetlabs/concat"
+      ref: "6.1.0"
