--- a/hiera.yaml
+++ b/hiera.yaml
@@ -6,6 +6,9 @@ defaults:  # Used for any hierarchy level that omits these keys.
   data_hash: yaml_data  # Use the built-in YAML backend.
 
 hierarchy:
+  - name: "puppet type"
+    paths:
+      - "puppet/%{facts.puppet_type}.yaml"
   - name: "osfamily/major release"
     paths:
         # Used to distinguish between Debian and Ubuntu
